<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <RelativeLayout
        android:id="@+id/rltTop"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <ImageView
            android:id="@+id/imgBackPass"
            android:src="@drawable/ic_baseline_chevron_left_24"

            android:layout_width="wrap_content"
            android:layout_height="60dp"
            />
        <TextView

            android:text="@string/title_change_password"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="60dp"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:layout_below="@+id/rltTop"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:text="@string/old_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/edtOldPass"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/new_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/edtNewPass1"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/new_pass"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/edtNewPass2"
            android:inputType="textPassword"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btnSubmit"
            android:text="@string/confirm"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </LinearLayout>

</RelativeLayout>