<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"


                android:layout_height="match_parent">

                <TextView
                    android:background="@color/background_gray"
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/title_personal_information"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:textColor="@color/black"
                    tools:ignore="MissingConstraints" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="55dp"
                    android:background="#EDEDED"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="-2dp">

                    <ImageView
                        android:id="@+id/imgUser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="100dp"
                        android:src="@drawable/ic_person"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvUsername"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="Username"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/imgUser"
                        app:layout_constraintStart_toStartOf="@+id/imgUser"
                        app:layout_constraintTop_toBottomOf="@+id/imgUser" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="60dp"
                        android:layout_marginEnd="24dp"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvUsername">



                        <TextView
                            android:id="@+id/btDoiPass"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:background="@drawable/background_cardview"

                            android:elevation="3dp"
                            android:gravity="center"
                            android:text="@string/change_password"
                            android:textSize="15sp"
                            android:textStyle="bold" />


                        <TextView
                            android:id="@+id/idBtnLogout"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:background="@drawable/background_cardview"
                            android:elevation="3dp"
                            android:gravity="center"
                            android:text="@string/log_out"
                            android:textSize="15sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>


</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>